--- a/reports/comentarios-e-cultura.Rmd
+++ b/reports/comentarios-e-cultura.Rmd
@@ -218,7 +218,7 @@ grafico5 + theme(legend.position = "top",
                                      lineheight=.5,
                                      family="Times",
                                      face="bold.italic",
-                                     colour="orange"),
+                                     colour="yellow"),
            axis.text.x = element_text(size=rel(1.1),
                                       family="Courier",
                                       face="bold",
